name:                hsnake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hsnake#readme
license:             BSD3
license-file:        LICENSE
author:              Brad Svercl
maintainer:          bradsvercl@gmail.com
copyright:           2019 Brad Svercl
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hsnake
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , lens
                     , random
